<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_admin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="0dp">

    <!--<a href="https://www.flaticon.com/free-icons/arrow" title="arrow icons">Arrow icons created by Kirill Kazachek - Flaticon</a>-->
    <Button
        android:id="@+id/btnClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow_description"
        android:drawableStart="@drawable/ic_arrow_back"
        android:onClick="onBackArrowClicked" />


    <!-- LinearLayout to center the buttons vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0010283B"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <!--<a href="https://www.flaticon.com/free-icons/daily" title="daily icons">Daily icons created by Freepik - Flaticon</a> -->
        <Button
            android:id="@+id/btn_events_option"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:drawableTop="@drawable/my_events_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_bold"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="Event Options" />

        <!--<a href="https://www.flaticon.com/free-icons/skills" title="skills icons">Skills icons created by Freepik - Flaticon</a>-->
        <Button
            android:id="@+id/btn_profile_option"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:drawableTop="@drawable/manage_profiles_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_bold"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="Profile Options" />

        <!--<a href="https://www.flaticon.com/free-icons/picture" title="picture icons">Picture icons created by Freepik - Flaticon</a>-->
        <Button
            android:id="@+id/btn_images_option"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:drawableTop="@drawable/mage_images_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_bold"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="Image Options" />

        <!-- <a href="https://www.flaticon.com/free-icons/settings" title="settings icons">Settings icons created by Freepik - Flaticon</a>-->
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_style"
            android:drawableTop="@drawable/settings_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_bold"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="Settings" />

    </LinearLayout>

</RelativeLayout>
