<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10283B "
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">
    <!-- Admin Button -->
    <Button
        android:id="@+id/button_admin"
        android:text="Admin"
        style="@style/AppRoundedButton"/>

    <!-- Attendee Button -->
    <Button
        android:id="@+id/button_attendee"
        android:text="Attendee"
        style="@style/AppRoundedButton"
        />

    <!-- Organizer Button -->
    <Button
        android:id="@+id/button_organizer"
        android:text="Organizer"
        style="@style/AppRoundedButton"
        />

</LinearLayout>