<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/fragment_image_list_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#10283B">

<Button
    android:id="@+id/btn_close_image_list"
    android:layout_width="25sp"
    android:layout_height="25sp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="16sp"
    android:layout_marginTop="16sp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/back_arrow_description"
    android:drawableStart="@drawable/ic_arrow_back"
    android:onClick="onBackArrowClicked"/>


<!-- ListView for the images -->

<TextView
    android:id="@+id/txt_image_list_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="167dp"
    android:layout_marginTop="16dp"
    android:text="Image List"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#FFFFFF"
    android:textSize="20dp"/>

<ListView
    android:id="@+id/listview_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/btn_close_image_list"
    android:background="#FFFFFF"
    android:layout_marginTop="16dp"
    android:divider="@android:color/darker_gray"
    android:dividerHeight="3dp"
    android:padding="0dp"
    android:scrollbars="vertical" />


</RelativeLayout>


