<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10283B"
    android:padding="16dp">

    <!--<a href="https://www.flaticon.com/free-icons/arrow" title="arrow icons">Arrow icons created by Kirill Kazachek - Flaticon</a>-->
    <Button
        android:id="@+id/btn_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow_description"
        android:drawableStart="@drawable/ic_arrow_back"
        android:onClick="onBackArrowClicked" />

    <!-- Content below (using LinearLayout for vertical alignment) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#10283B "
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnProfileSettings"
            style="@style/AppRoundedButton"
            android:text="Profile Settings" />


        <Switch
            android:id="@+id/switchGeoTracking"
            style="@style/AppRoundedSwitch"
            android:text="Toggle Geolocation Tracking" />

        <Button
            android:id="@+id/btnExitToMainMenu"
            style="@style/AppRoundedButton"
            android:text="Exit To Main Menu" />

    </LinearLayout>
</RelativeLayout>
